--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "url": "https://github.com/newjersey/njwds/issues"
   },
   "homepage": "https://github.com/newjersey/njwds#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@frctl/fractal": "^1.5.1",
+    "@frctl/nunjucks": "^2.0.5",
+    "gh-pages": "^3.1.0",
     "autoprefixer": "^9.8.6",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
@@ -33,10 +37,5 @@
     "sass": "^1.29.0",
     "uswds": "^2.10.0",
     "uswds-gulp": "github:uswds/uswds-gulp"
-  },
-  "devDependencies": {
-    "@frctl/fractal": "^1.5.1",
-    "@frctl/nunjucks": "^2.0.5",
-    "gh-pages": "^3.1.0"
   }
 }
